using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StaticStrings
{
    public static string horizontal = "Horizontal";
    public static string vertical = "Vertical";

    public static string anim_horizontal = "horizontal";
    public static string anim_vertical = "vertical";
    public static string anim_moveSpeed = "moveSpeed";
}
